--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
 </head>
 
 <body>
+    <div class="inputField">
+        <h2>Choose Date of Finish</h2>
+        <input type="date" id="start" name="trip-start">
+        <h2>Untill the selected date left:</h2>
+        <button class="reset">reset</button>
+    </div>
+    
     <div class="timer" id="timer-1">
+        
         <div class="field">
             <span class="value" data-value="days">11</span>
             <span class="label">Days</span>
