--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 <body>
     <div class="inputField">
         <h2>Choose Date of Finish</h2>
-        <input type="date" id="start" name="trip-start">
+        <div>
+            <input type="date" id="start" name="trip-start">
+            <button class="reset">reset</button>
+        </div>
         <h2>Untill the selected date left:</h2>
-        <button class="reset">reset</button>
     </div>
     
     <div class="timer" id="timer-1">
