--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 <body>
     <div class="inputField">
-        <h2>Choose Date of Finish</h2>
         <div>
+            <label for="start">Select date:</label>
             <input type="date" id="start" name="trip-start">
-            <button class="reset">reset</button>
+            <button class="reset" id="reset">reset</button>
         </div>
         <h2>Untill the selected date left:</h2>
     </div>
