--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="inputField">
         <div>
             <label for="start">Select date:</label>
-            <input type="date" id="start" name="trip-start">
-            <button class="reset" id="reset">reset</button>
+            <input class="date"type="date" id="start" name="trip-start">
+            <button class="reset" id="reset">Stop&Reset</button>
         </div>
         <h2>Untill the selected date left:</h2>
     </div>
